--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       <a target="_blank" href="https://www.facebook.com" <button type="button" class="btn social-icon"><i class="fab fa-facebook-f"></i></button></a>
       <a target="_blank" href="https://www.instagram.com" <button type="button" class="btn social-icon"><i class="fab fa-instagram"></i></button></a>
       <a href="mailto:mkg123@gmail.com?subject=Woof!" <button type="button" class="btn social-icon"><i class="fas fa-envelope"></i></button></a>
-      <p class="copyright">© Copyright 2018 TinDog</p>
+      <p class="copyright">© Copyright 2020 Mark K Gallagher</p>
     </div>
   </footer>
 
