update carousel with auggie and jake

--- a/index.html
+++ b/index.html
@@ -106,6 +106,16 @@
           <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
           <em>Beverly, California</em>
         </div>
+        <div class="carousel-item container-fluid">
+          <h2 class="testimonial-text">Let's get this party started! 🐶</h2>
+          <img class="testimonial-image" src="images/auggie.png" alt="auggie-profile">
+          <em>Auggie, Ohio</em>
+        </div>
+        <div class="carousel-item container-fluid">
+          <h2 class="testimonial-text">We miss Jake! ❤️</h2>
+          <img class="testimonial-image" src="images/jake.png" alt="jake-profile">
+          <em>The Rainbow Bridge</em>
+        </div>
       </div>
       <!-- carousel buttons -->
       <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
