--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
           <em>Pebbles, Michigan</em>
         </div>
         <div class="carousel-item container-fluid">
-          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life, I think.</h2>
-          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-          <em>Beverly, California</em>
+          <h2 class="testimonial-text">I'm still recovering from my last date on TinDog. 🦴</h2>
+          <img class="testimonial-image" src="images/daisy.png" alt="daisy-profile">
+          <em>Daisy, Florida</em>
         </div>
         <div class="carousel-item container-fluid">
           <h2 class="testimonial-text">Let's get this party started! 🐶</h2>
@@ -115,6 +115,11 @@
           <h2 class="testimonial-text">We miss Jake! ❤️</h2>
           <img class="testimonial-image" src="images/jake.png" alt="jake-profile">
           <em>The Rainbow Bridge</em>
+        </div>
+        <div class="carousel-item container-fluid">
+          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life, I think.</h2>
+          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+          <em>Beverly, California</em>
         </div>
       </div>
       <!-- carousel buttons -->
