--- a/index.html
+++ b/index.html
@@ -98,22 +98,22 @@
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
           <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof!</h2>
-          <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
+          <img class="testimonial-image" src="images/dog-img.jpg" alt="pebbles-profile">
           <em>Pebbles, Michigan</em>
         </div>
         <div class="carousel-item container-fluid">
-          <h2 class="testimonial-text">I'm still recovering from my last date on TinDog. 🦴</h2>
-          <img class="testimonial-image" src="images/daisy.png" alt="daisy-profile">
+          <h2 class="testimonial-text">I'm still recovering from my last date on TinDog.</h2>
+          <img class="testimonial-image daisy-image" src="images/daisy.png" alt="daisy-profile">
           <em>Daisy, Florida</em>
         </div>
         <div class="carousel-item container-fluid">
-          <h2 class="testimonial-text">Let's get this party started! 🐶</h2>
-          <img class="testimonial-image" src="images/auggie.png" alt="auggie-profile">
+          <h2 class="testimonial-text">Let's get this party started!</h2>
+          <img class="testimonial-image auggie-image" src="images/auggie.png" alt="auggie-profile">
           <em>Auggie, Ohio</em>
         </div>
         <div class="carousel-item container-fluid">
           <h2 class="testimonial-text">We miss Jake! ❤️</h2>
-          <img class="testimonial-image" src="images/jake.png" alt="jake-profile">
+          <img class="testimonial-image jake-image" src="images/jake.png" alt="jake-profile">
           <em>The Rainbow Bridge</em>
         </div>
         <div class="carousel-item container-fluid">
